# mik

./: .gitignore  LICENSE  README.md  pyproject.toml  test.geojson  test2.geojson
src/apps/: ndpa2json.py
src/mik/: __init__.py  ndpa.py  wsi.py
