[project]
name = "mik"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "configargparse>=1.7",
    "openslide-bin>=4.0.0.6",
    "openslide-python>=1.4.1",
    "shapely>=2.0.7",
    "simplejson>=3.20.1",
    "wsitk-annot",
]

[tool.uv.sources]
wsitk-annot = { git = "https://github.com/vladpopovici/wsitk-annot" }
